@@ -1033,6 +1033,10 @@ ags_synth_generator_get_lfo_depth
 ags_synth_generator_set_lfo_depth
 ags_synth_generator_get_tuning
 ags_synth_generator_set_tuning
+ags_synth_generator_get_sync_point
+ags_synth_generator_set_sync_point
+ags_synth_generator_get_sync_point_count
+ags_synth_generator_set_sync_point_count
 ags_synth_generator_get_do_fm_synth
 ags_synth_generator_set_do_fm_synth
 ags_synth_generator_get_fm_lfo_oscillator
